--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "bower": "^1.8.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.14.0",
@@ -40,5 +41,8 @@
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "fs": "0.0.1-security"
+  }
 }
