--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "archive-web",
+  "name": "archive",
   "version": "0.0.0",
   "description": "Small description for archive-web goes here",
   "license": "MIT",
