fix bugs cause due to changing repo name

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "archive-web",
-  "description": "Small description for archive-web goes here",
+  "name": "archive",
+  "description": "Small description for archive goes here",
   "main": "",
   "authors": [
     "Sujan Shrestha <shrsujan2007@gmail.com>"
