--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "archive",
   "version": "0.0.0",
-  "description": "Small description for archive-web goes here",
+  "description": "Small description for archive goes here",
   "license": "MIT",
   "author": "",
   "directories": {
